# SocialMediaAgent

./: .gitignore
socialmediaagent-api/: README.md  alembic.ini  main.py  pyproject.toml
socialmediaagent-api/core/: config.py  database.py  logging.py  paths.py  responses.py  security.py
socialmediaagent-api/dependencies/: __init__.py  auth.py  db.py  pagination.py
socialmediaagent-api/migrations/: env.py
socialmediaagent-api/models/: __init__.py  approval_workflows.py  base.py  brand_voice.py  companies.py  company_users.py  content_calendar.py  generation_jobs.py  platform_connections.py  post_performance.py  posts.py  users.py
socialmediaagent-api/routers/: __init__.py  admin_users.py  ai.py  analytics.py  approval_workflow.py  auth.py  brand_voice.py  calendar.py  company.py  health.py  jobs.py  platforms.py  postforme_webhooks.py  posts.py
socialmediaagent-api/schemas/: __init__.py  admin_users.py  approval_workflow.py  auth.py  brand_voice.py  calendar.py  common.py  company.py  jobs.py  platforms.py  posts.py
socialmediaagent-api/scripts/: reset_and_seed.sh  seed_demo_data.py
socialmediaagent-api/services/: __init__.py  ai_service.py  analytics_service.py  approval_workflow_service.py  auth_service.py  brand_voice_service.py  calendar_service.py  common.py  company_service.py  health_service.py  jobs_service.py  platforms_service.py  posts_service.py  publish_service.py  storage_service.py
socialmediaagent-api/tests/: test_company_owner_auth.py  test_postforme_client.py  test_rbac_dependencies.py
socialmediaagent-ui/: package-lock.json  proxy.ts  (+1 more)
(+78 files in other folders)
